glibc (2.7-13) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * Update Brazilian Portuguese debconf translation, by Felipe Augusto van de
    Wiel.  Closes: #485381.

  [ Petr Salinger]
  * debian/sysdeps/kfreebsd.mk: also use the bsm/ directory from kernel
    headers.
  * kfreebsd/local-sysdeps.diff: update to revision 2201 (from glibc-bsd).

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-MSG_NOSIGNAL.diff: New patch to implement
    MSG_NOSIGNAL.
  * patches/hurd-i386/local-msg-nosignal.diff: Forcibly set MSG_NOSIGNAL to 0
    until pfinet gets recompiled.  Only apply on hurd-i386.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 24 Jun 2008 11:36:17 +0200

glibc (2.7-12) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/alpha/submitted-procfs_h.diff: don't include elf/asm.h on alpha,
    as it has been removed from linux-libc-dev.
  * patch/arm/cvs-ioperm.diff: don't include asm/page.h as it has been removed
    from linux-libc-dev.  Closes: #480892.
  * patches/hppa/cvs-atomic.diff: don't remove "memory" asm constraint. Fixes
    FTBFS on hppa.
  * Update Swedish debconf translation, by Martin Bagge.  Closes: #482467.
  * sysdeps/amd64.mk, sysdeps/i386.mk, control.in/main: bump g++-4.3 build-depends
    to (>= 4.3.0-2) to make sure the cld fix is applied. Use gcc-4.3 on amd64
    and i386.
  * patches/any/cvs-iconv-braces.diff: new patch from upstream to fix various
    iconv bugs.
  * local/manpages/nscd.conf.5: update nscd.conf manpage.  Closes: #482505.

  [ Clint Adams ]
  * Add any/cvs-regex_anchor.diff to fix performance anomaly with ^$.
    closes: #475474.

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-termios.diff: update patch, fixes compilation of jove.
  * patches/hurd-i386/local-pthread-unsupported-stubs.diff: new patch to
    declare the unsupported function stubs, fixes compilation of pike.  Also
    bump the dependency on hurd-dev to get <gnu/stubs-pthread.h>.
  * patches/hurd-i386/local-unlockpt-chroot.diff: new patch to fix ptys in