@@ -51,7 +51,7 @@
 +#define THREAD_GSCOPE_SET_FLAG() \
 +  THREAD_SETMEM (THREAD_SELF, p_gscope_flag, THREAD_GSCOPE_FLAG_USED)
 +#define THREAD_GSCOPE_WAIT() \
-+  GL(dl_wait_lookup_done) ()
++  do { /* GL(dl_wait_lookup_done) () */ } while (0)
 +
  # endif	/* HAVE_TLS_SUPPORT */
  #endif /* __ASSEMBLER__ */
