@@ -25,7 +25,7 @@
 +    }									     \
 +  while (0)
 +#define THREAD_GSCOPE_WAIT() \
-+  GL(dl_wait_lookup_done) ()
++  do { /* GL(dl_wait_lookup_done) () */ } while (0)
 +
  /* Install the dtv pointer.  The pointer passed is to the element with
     index -1 which contain the length.  */
